Fixed:legendBar has a gap when legend is presented

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -12,6 +12,7 @@
     height: 24px;
     
     .dropdown-pills-container {
+        display: inline-block;
         ul {
             margin: 0;
             text-align: right;
